<resources>

    <string name="app_name">hello</string>

    <string name="uc1">线性布局</string>

    <string name="uc2">相对布局</string>

    <string name="uc3">帧布局</string>

    <string name="uc4">表格布局</string>

    <string name="uc5">网格布局</string>

    <string name="my_name">范梦宣</string>

    <string name="uc1_btn1">水平布局</string>

    <string name="uc1_btn2">垂直布局</string>

    <string name="uc1_btn3">靠左对齐</string>

</resources>

