<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/ll_1"
    tools:context=".UC1Activity">

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <Button
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:id="@+id/uc1_btn2"
            android:text="@string/uc1_btn2"
            android:padding="20dp"
            android:onClick="changeVertical" />
        <Button
            android:id="@+id/uc1_btn1"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:padding="20dp"
            android:onClick="changeHorizontal"
            android:text="@string/uc1_btn1"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:id="@+id/uc1_btn3"
            android:text="@string/uc1_btn3"
            android:onClick="changeLeft" />
    </LinearLayout>
    <RelativeLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/uc1_btn4"
            android:text="返回"
            android:onClick="return1"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>
